spacing fix

--- a/src/pages/product-design/ProductDesign.modules.css
+++ b/src/pages/product-design/ProductDesign.modules.css
@@ -92,6 +92,11 @@
     padding: 0.1em 0.3em 0.1em 0.3em;
 }
 
+hr {
+    margin-top: 1rem;
+    color: #494949;
+}
+
 .bullet_points {
     display: flex;
     gap: 1rem;
@@ -113,8 +118,11 @@
 }
 
 .projects_list {
-    margin-top: 5rem;
+    margin-top: 1rem;
     width: 900px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
 }
 
 .project {
@@ -128,9 +136,9 @@
 }
 
 .project h4 {
-    font-size: 20px;
+    font-size: 18px;
     text-align: left;
-    margin-top: 1rem;
+    margin-top: 0.8rem;
     margin-bottom: 0rem;
 }
 
@@ -139,7 +147,7 @@
     gap: 1rem;
     list-style: none;
     padding: 0;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     font-weight: 400;
     font-style: italic;
     font-size: 16px;
